--- a/cloudiness.html
+++ b/cloudiness.html
@@ -28,10 +28,10 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active-nav" href="landingPage.html"><i class="fas fa-home"></i></a>
+            <a class="nav-link" href="landingPage.html"><i class="fas fa-home"></i></a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle active-nav" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -61,11 +61,10 @@
               <div class="card-body">
                 <h4 class="card-header ">
                 Summary: Latitude Analysis</h4>
-                <p class="card-text"><img id="image" src="Resources/Images/Longitude_vs_Latitude.png"  class="img-fluid" align="left" alt="Latitude vs Longitude">
-                  <p>The purpose of this project is to analyze how weather changes as you get closer to the equator.
-                  To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-                  After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included:</br>
-                  <p>Temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+                <p class="card-text"><img id="image" src="Resources/Images/Latitude_vs_Cloudiness.png"  class="img-fluid" align="left" alt="Latitude vs Longitude">
+                  <p>
+                  Analysis of the data shows that there is no relationship between latitude and cloudiness.
+                  </p>
                 </p>
               </div>
             </div>
@@ -83,7 +82,7 @@
                   
                   <div class="col-sm-6">
                     <div class="hovereffect">
-                      <a href="cloudiness.html"><img src="Resources/Images/Latitude_vs_Cloudiness.png" class="img-thumbnail" alt="Latitude vs cloudiness"><p class="card-text" align="center" style="color:black" ><small>Latitude vs. Cloudiness</small></p></a>
+                      <a href="cloudiness.html"><img src="Resources/Images/Latitude_vs_Cloudiness.png" class="img-thumbnail cloudiness" alt="Latitude vs cloudiness"><p class="card-text" align="center" style="color:black" ><small>Latitude vs. Cloudiness</small></p></a>
                     </div>
                   </div>
                 </div>
