--- a/comparison.html
+++ b/comparison.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active-nav" href="landingPage.html"><i class="fas fa-home"></i></a>
+            <a class="nav-link" href="landingPage.html"><i class="fas fa-home"></i></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -42,7 +42,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="comparison.html">Comparison</a>
+            <a class="nav-link active-nav" href="comparison.html">Comparison</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="data.html">Data</a>
@@ -53,49 +53,40 @@
  <!-- Nav Bar -->
 
  <!-- content-->
-    <div class="jumbotron">
+<div class="jumbotron">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
-            <div class="card card-custom ">
-              <div class="card-body">
-                <h4 class="card-header ">
-                Summary: Latitude Analysis</h4>
-                <p class="card-text"><img id="image" src="Resources/Images/Longitude_vs_Latitude.png"  class="img-fluid" align="left" alt="Latitude vs Longitude">
-                  <p>The purpose of this project is to analyze how weather changes as you get closer to the equator.
-                  To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-                  After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included:</br>
-                  <p>Temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
+          <div class="col-md-12">
             <div class="card card-custom">
               <div class="card-body">
-                <h4 class="card-header">Visualisations</h4>
+                <h4 class="card-header">Comparison:</h4>
+                <hr>
                 <div class="row">
-                  <div class="col-sm-6">
+                  <div class="col-md-6">
                     <div class="hovereffect">
-                      <a href="maxTemp.html"><img src="Resources/Images/Latitude_vs_Max Temperature.png" class=" img-thumbnail" alt="Latitude vs Temperature"><p class="card-text" align="center" style="color:black"><small>Latitude vs. Temperature</small></p></a>
+                      <h6 class="card-title">Latitude vs Temperature</h6>
+                      <a href="maxTemp.html"><img src="Resources/Images/Latitude_vs_Max Temperature.png" class="card-img" alt="Latitude vs Temperature"></a>
                     </div>
                   </div>
-                  
-                  <div class="col-sm-6">
+                  <div class="col-md-6">
                     <div class="hovereffect">
-                      <a href="cloudiness.html"><img src="Resources/Images/Latitude_vs_Cloudiness.png" class="img-thumbnail" alt="Latitude vs cloudiness"><p class="card-text" align="center" style="color:black" ><small>Latitude vs. Cloudiness</small></p></a>
+                      <h6 class="card-title">Latitude vs Cloudiness</h6>
+                      <a href="cloudiness.html"><img src="Resources/Images/Latitude_vs_Cloudiness.png" class="card-img" alt="Latitude vs cloudiness"></a>
                     </div>
                   </div>
                 </div>
+                <hr>
                 <div class="row">
-                  <div class="col-sm-6">
+                  <div class="col-md-6">
                     <div class="hovereffect">
-                      <a href="humidity.html"><img src="Resources/Images/Latitude_vs_Humidity.png" class="img-thumbnail" alt="Latitude vs Humidity"><p class="card-text" align="center" style="color:black"><small>Latitude vs. Humidity</small></p></a>
+                      <h6 class="card-title">Latitude vs Humidity</h6>
+                      <a href="humidity.html"><img src="Resources/Images/Latitude_vs_Humidity.png" class="card-img" alt="Latitude vs Humidity"></a>
                     </div>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-md-6">
                     <div class="hovereffect">
-                      <a href="windspeed.html"><img src="Resources/Images/Latitude_vs_Wind_Speed.png" class=" img-thumbnail" alt="Latitude vs Wind Speed"><p class="card-text" align="center" style="color:black"><small>Latitude vs. Wind Speed</small></p></a>
+                      <h6 class="card-title">Latitude vs Wind Speed</h6>
+                      <a href="windspeed.html"><img src="Resources/Images/Latitude_vs_Wind_Speed.png" class="card-img" alt="Latitude vs Wind Speed"></a>
                     </div>
                   </div>
                 </div>
