--- a/humidity.html
+++ b/humidity.html
@@ -28,10 +28,10 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active-nav" href="landingPage.html"><i class="fas fa-home"></i></a>
+            <a class="nav-link" href="landingPage.html"><i class="fas fa-home"></i></a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle active-nav" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -61,11 +61,8 @@
               <div class="card-body">
                 <h4 class="card-header ">
                 Summary: Latitude Analysis</h4>
-                <p class="card-text"><img id="image" src="Resources/Images/Longitude_vs_Latitude.png"  class="img-fluid" align="left" alt="Latitude vs Longitude">
-                  <p>The purpose of this project is to analyze how weather changes as you get closer to the equator.
-                  To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-                  After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included:</br>
-                  <p>Temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+                <p class="card-text"><img id="image" src="Resources/Images/Latitude_vs_Humidity.png"  class="img-fluid" align="left" alt="Latitude vs Longitude">
+                  <p>Analysis of the data shows that latitude does not impact the percent humidity. However, the majority of the cities generated from the analysis had humidity levels greater than 60%.</p>
                 </p>
               </div>
             </div>
@@ -90,7 +87,7 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <div class="hovereffect">
-                      <a href="humidity.html"><img src="Resources/Images/Latitude_vs_Humidity.png" class="img-thumbnail" alt="Latitude vs Humidity"><p class="card-text" align="center" style="color:black"><small>Latitude vs. Humidity</small></p></a>
+                      <a href="humidity.html"><img src="Resources/Images/Latitude_vs_Humidity.png" class="img-thumbnail humidity" alt="Latitude vs Humidity"><p class="card-text" align="center" style="color:black"><small>Latitude vs. Humidity</small></p></a>
                     </div>
                   </div>
                   <div class="col-sm-6">
