data table update

--- a/maxTemp.html
+++ b/maxTemp.html
@@ -62,8 +62,8 @@
                 <h4 class="card-header ">
                 Summary: Latitude Analysis</h4>
                 <p class="card-text"><img id="image" src="Resources/Images/Latitude_vs_Max Temperature.png"  class="img-fluid" align="left" alt="Latitude vs Longitude">
-                  <p>As expected, the weather becomes significantly warmer as one approaches the equator (o Deg Latitude).
-                  More interestingly, however , is teh fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere.</p>
+                  <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg Latitude).
+                  More interestingly, however , is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere.</p>
 
                   <p>This may be due to the tilt of the earth at the time of the year this data was gathered</p>
                 </p>
