update the mail icon

--- a/comparison.html
+++ b/comparison.html
@@ -63,13 +63,13 @@
                 <hr>
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="hovereffect">
+                    <div class="">
                       <h6 class="card-title">Latitude vs Temperature</h6>
                       <a href="maxTemp.html"><img src="Resources/Images/Latitude_vs_Max Temperature.png" class="card-img" alt="Latitude vs Temperature"></a>
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="hovereffect">
+                    <div class="">
                       <h6 class="card-title">Latitude vs Cloudiness</h6>
                       <a href="cloudiness.html"><img src="Resources/Images/Latitude_vs_Cloudiness.png" class="card-img" alt="Latitude vs cloudiness"></a>
                     </div>
@@ -78,13 +78,13 @@
                 <hr>
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="hovereffect">
+                    <div class="">
                       <h6 class="card-title">Latitude vs Humidity</h6>
                       <a href="humidity.html"><img src="Resources/Images/Latitude_vs_Humidity.png" class="card-img" alt="Latitude vs Humidity"></a>
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="hovereffect">
+                    <div class="">
                       <h6 class="card-title">Latitude vs Wind Speed</h6>
                       <a href="windspeed.html"><img src="Resources/Images/Latitude_vs_Wind_Speed.png" class="card-img" alt="Latitude vs Wind Speed"></a>
                     </div>
@@ -108,7 +108,7 @@
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
         <a href="mailto:emailarundhati@gmail.com">
-          <i class="fas fa-at fa-2x"></i>
+          <i class="fas fa-envelope-open-text fa-2x"></i>
         </a>
         <p class="text text-center">
           <small>© Copyright 2019 arundhati-chakraborty</br>
