--- a/data.html
+++ b/data.html
@@ -6723,7 +6723,7 @@
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
         <a href="mailto:emailarundhati@gmail.com">
-          <i class="fas fa-at fa-2x"></i>
+          <i class="fas fa-envelope-open-text fa-2x"></i>
         </a>
         <p class="text text-center">
           <small>© Copyright 2019 arundhati-chakraborty</br>
