--- a/humidity.html
+++ b/humidity.html
@@ -73,25 +73,25 @@
                 <h4 class="card-header">Visualisations</h4>
                 <div class="row">
                   <div class="col-sm-6">
-                    <div class="hovereffect">
+                    <div class="">
                       <a href="maxTemp.html"><img src="Resources/Images/Latitude_vs_Max Temperature.png" class=" img-thumbnail" alt="Latitude vs Temperature"><p class="card-text" align="center" style="color:black"><small>Latitude vs. Temperature</small></p></a>
                     </div>
                   </div>
                   
                   <div class="col-sm-6">
-                    <div class="hovereffect">
+                    <div class="">
                       <a href="cloudiness.html"><img src="Resources/Images/Latitude_vs_Cloudiness.png" class="img-thumbnail" alt="Latitude vs cloudiness"><p class="card-text" align="center" style="color:black" ><small>Latitude vs. Cloudiness</small></p></a>
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-sm-6">
-                    <div class="hovereffect">
+                    <div class="">
                       <a href="humidity.html"><img src="Resources/Images/Latitude_vs_Humidity.png" class="img-thumbnail humidity" alt="Latitude vs Humidity"><p class="card-text" align="center" style="color:black"><small>Latitude vs. Humidity</small></p></a>
                     </div>
                   </div>
                   <div class="col-sm-6">
-                    <div class="hovereffect">
+                    <div class="">
                       <a href="windspeed.html"><img src="Resources/Images/Latitude_vs_Wind_Speed.png" class=" img-thumbnail" alt="Latitude vs Wind Speed"><p class="card-text" align="center" style="color:black"><small>Latitude vs. Wind Speed</small></p></a>
                     </div>
                   </div>
@@ -114,7 +114,7 @@
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
         <a href="mailto:emailarundhati@gmail.com">
-          <i class="fas fa-at fa-2x"></i>
+          <i class="fas fa-envelope-open-text fa-2x"></i>
         </a>
         <p class="text text-center">
           <small>© Copyright 2019 arundhati-chakraborty</br>
